<resources>
    <string name="app_name">KUET_academic_portal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Content descriptions for images -->
    <string name="background_image_description">Background image</string>
    <string name="kuet_logo_description">KUET logo</string>

    <string name="back">Back</string>
    <string name="contacts_title">Contacts</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="add_contact">Add Contact</string>
    <string name="no_attendance_records">No attendance records found.\nRoll: %1$s</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- AddContactActivity strings -->
    <string name="add_new_contact">Add New Contact</string>
    <string name="full_name_hint">Full Name</string>
    <string name="designation_hint">Designation (e.g. Professor)</string>
    <string name="department_hint">Department</string>
    <string name="email_hint">Email Address</string>
    <string name="phone_hint">Phone Number</string>
    <string name="save_contact">Save Contact</string>
    <string name="cancel">Cancel</string>

    <!-- Contact item strings -->
    <string name="contact_name_placeholder">Name</string>
    <string name="contact_designation_placeholder">Designation</string>
    <string name="contact_department_placeholder">Department</string>
    <string name="contact_email_placeholder">email@example.com</string>
    <string name="contact_phone_placeholder">01712345678</string>
    <string name="desc_email_icon">Email symbol</string>
    <string name="desc_phone_icon">Phone symbol</string>
    <string name="desc_delete_contact">Delete contact</string>

    <!-- Result strings -->
    <string name="add_result_title">Add Student Result</string>
    <string name="roll_hint">Student Roll (e.g. 2107001)</string>
    <string name="term_hint">Term (1-8)</string>
    <string name="gpa_hint">Term GPA (e.g. 3.75)</string>
    <string name="ct_marks_label">CT Marks (Format: Course:Mark)</string>
    <string name="ct_marks_hint">e.g. CSE3100:18, CSE3101:15, HUM3119:19</string>
    <string name="save_result">Save Result</string>
    <string name="academic_results_title">Academic Results</string>
    <string name="term_wise_cgpa">Term Wise CGPA</string>
    <string name="ct_marks_distribution">CT Marks Distribution</string>
    <string name="select_term">Select Term: </string>

    <!-- Routine strings -->
    <string name="add_routine_title">Add Class Routine</string>
    <string name="dept_hint">Department (e.g. CSE)</string>
    <string name="year_hint">Year (1-4)</string>
    <string name="term_hint_num">Term (1-2)</string>
    <string name="start_time_hint">Start (e.g. 08:00 AM)</string>
    <string name="end_time_hint">End (e.g. 08:50 AM)</string>
    <string name="course_code_hint">Course Code (e.g. CSE 3101)</string>
    <string name="teacher_hint">Teacher (e.g. KMA)</string>
    <string name="room_hint">Room No (e.g. 101)</string>
    <string name="save_routine">Save Routine</string>
    <!-- Item Routine placeholders -->
    <string name="routine_day">Monday</string>
    <string name="routine_time">08:00 AM - 08:50 AM</string>
    <string name="routine_course">CSE 3101</string>
    <string name="routine_teacher">Teacher: KMA</string>
    <string name="routine_room">Room: 101</string>
    <string name="class_routine_title">Class Routine</string>
    <string name="no_routine_found">No routine found</string>
</resources>